--- a/views/ejs/prods.ejs
+++ b/views/ejs/prods.ejs
@@ -20,7 +20,7 @@
                             <p>Precio: <%=prod.price %>
                             </p>
     
-                            <img src="https://cdn4.iconfinder.com/data/icons/hodgepodge-free/32/basket_empty_shop_buy-256.png" alt="">
+                            <img src=<%=prod.thumbnail %> />
                         </li>
     
     
